--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.1.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.11.5",
+    "@stripe/stripe-js": "^1.54.0",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "^13.4.4",
+    "next-sanity": "^4.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
+    "sanity": "^3.11.5",
+    "stripe": "^12.7.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.3"
   }
 }
